# TodoRS

./: .gitignore  .todomrs_device_id  .todomrs_user_id  Cargo.toml  Northstar.md  README.md  RECURRENCE.md  context.md  final_changes.md  plan.md  progress.md  research.md  review-architecture.md  review-correctness.md  review-integration.md  todomrs.db  worker-plan.md
backend/migrations/: 001_init.sql  002_rls_policies.sql
crates/todomrs-core/: Cargo.toml
crates/todomrs-core/src/: domain.rs  lib.rs  parser.rs  recurrence.rs
crates/todomrs-store/: Cargo.toml
crates/todomrs-store/src/: db.rs  lib.rs  operation_store.rs  project_store.rs  recurrence_store.rs  tag_store.rs  task_store.rs
crates/todomrs-store/tests/: operation_store_test.rs  project_store_test.rs  tag_store_test.rs  task_store_test.rs
crates/todomrs-sync/: Cargo.toml
crates/todomrs-sync/src/: client.rs  lib.rs  operations.rs  snapshot.rs
crates/todomrs-tui/: Cargo.toml
crates/todomrs-tui/src/: app.rs  config.rs  main.rs  notifications.rs  storage.rs  ui.rs
migrations/: 0001_init.sql  0002_operations.sql  0003_snapshots.sql  0004_recurrence_enhancements.sql  0005_metadata.sql
plans/: phase_01.md  phase_02.md  phase_03.md  phase_03_handoff.md  phase_04.md  phase_05.md  phase_06.md  phase_065.md  phase_065_final.md  phase_07.md  phase_08.md  phase_09.md  phase_10.md  recurrence-integration.md  sync_hardening.md
pwa/: README.md  package-lock.json  package.json  vite.config.ts
pwa/src/: app.css  app.html  service-worker.ts
pwa/src/lib/: notifications.ts  parser.ts  supabase.ts
pwa/src/lib/components/shared/: AddTaskModal.svelte  ConfirmDialog.svelte  EmptyState.svelte  FloatingAddButton.svelte  Navigation.svelte  QuickAdd.svelte  SearchOverlay.svelte  SyncStatus.svelte  TaskItem.svelte  TaskList.svelte
pwa/src/lib/db/: index.ts  metadata.ts  operations.ts  projects.ts  recurrence_rules.ts  schema.ts  sync-state.ts  tags.ts  tasks.ts
pwa/src/lib/stores/: auth.ts  confirm.ts  edit.ts  fab.ts  projects.ts  search.ts  sync.ts  tasks.ts
pwa/src/lib/sync/: client.ts
pwa/src/routes/: +layout.svelte  +page.svelte
pwa/src/routes/completed/: +page.svelte
pwa/src/routes/inbox/: +page.svelte
pwa/src/routes/login/: +page.svelte
pwa/src/routes/projects/: +page.svelte
pwa/src/routes/today/: +page.svelte
pwa/src/routes/upcoming/: +page.svelte
pwa/static/: manifest.json
supabase/: config.toml
supabase/functions/get-operations/: index.ts
supabase/functions/upload-operations/: index.ts
