[workspace]
members = [
    "crates/todomrs-core",
    "crates/todomrs-store",
    "crates/todomrs-sync",
    "crates/todomrs-tui",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
