[package]
name = "todomrs-store"
version = "0.1.0"
edition = "2021"

[dependencies]
todomrs-core = { path = "../todomrs-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
