[package]
name = "todomrs-store"
version = "0.1.0"
edition = "2021"

[dependencies]
todomrs-core = { path = "../todomrs-core" }
todomrs-sync = { path = "../todomrs-sync" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
