[package]
name = "todomrs-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
todomrs-core = { path = "../todomrs-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
