[package]
name = "todomrs-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "todomrs"
path = "src/main.rs"

[dependencies]
todomrs-core = { path = "../todomrs-core" }
todomrs-store = { path = "../todomrs-store" }
todomrs-sync = { path = "../todomrs-sync" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
