[package]
name = "todomrs-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "todomrs"
path = "src/main.rs"

[dependencies]
todomrs-core = { path = "../todomrs-core" }
todomrs-store = { path = "../todomrs-store" }
todomrs-sync = { path = "../todomrs-sync" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }
libsqlite3-sys = { version = "0.27", features = ["bundled"] }

[dev-dependencies]
